Fix dashboard in dark mode

--- a/axelor-front/src/views/dashboard/dashboard.module.scss
+++ b/axelor-front/src/views/dashboard/dashboard.module.scss
@@ -1,7 +1,3 @@
-.dashlet-container {
-  background: #fff;
-}
-
 .dashlet {
   height: 100%;
   width: 100%;
